force-app/main/default/objects/Pr_Candidate_Search__c/fields/Field_Filters__c.field-meta.xml
<CustomField>
    <fullName>Field_Filters__c</fullName>
    <label>Field Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>