force-app/main/default/objects/Pr_Candidate_Search__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Candidate Searchs</relationshipLabel>
    <relationshipName>Candidate_Searchs</relationshipName>
    <type>Lookup</type>
</CustomField>