force-app/main/default/objects/Pr_Candidate_Search__c/fields/Scope_Fields__c.field-meta.xml
<CustomField>
    <fullName>Scope_Fields__c</fullName>
    <label>Scope Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>