force-app/main/default/objects/Pr_Candidate_Search__c/fields/Search_Terms__c.field-meta.xml
<CustomField>
    <fullName>Search_Terms__c</fullName>
    <label>Search Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>